# computational-intelligence

./: README.md
local_search_ga/: README.md  local_search.ipynb  local_search_lib.py
nim/: README.md  nim_es.ipynb
quixo/: game.py  main.py  quixo.py  quixo_deep_q_learning.py  quixo_is_solved.py
quixo/models/: model_4x4.pt  model_5x5.pt
quixo/quixo_project/: CMakeLists.txt  make.sh
quixo/quixo_project/src/: main.cpp  main_threading.cpp
set_covering/: set_covering_a_star.ipynb
tictactoe_rl/: README.md  tictactoe.py  tictactoe_gym_env.py
tictactoe_rl/models/: q_table_1.pkl  q_table_2.pkl  q_table_3.pkl
